# somacos

./: Main.hs  foo.cabal  stack.yaml
