name:           foo
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/unhammer/foo#readme>
homepage:       https://github.com/unhammer/foo#readme
bug-reports:    https://github.com/unhammer/foo/issues
author:         Kevin Brubeck Unhammer
maintainer:     kevin@systorvest.no
copyright:      Copyright: (c) 2019 Kevin Brubeck Unhammer
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/unhammer/foo

executable Foo
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  extra-lib-dirs:       lib
  extra-libraries:      tdsodbc
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

